Update index and latest

--- a/sources/index.html
+++ b/sources/index.html
@@ -1,6 +1,7 @@
 <head>
-  <meta http-equiv="refresh" content="0; URL=https://mdadams.github.io/sg20_guidelines_for_teaching_cpp/latest/" />
+    <meta http-equiv="refresh" content="0; URL=https://cplusplus.github.io/SG20/latest/" />
 </head>
+
 <body>
-  <p>If you are not redirected in five seconds, <a href="https://mdadams.github.io/sg20_guidelines_for_teaching_cpp/latest/">click here</a>.</p>
+    <p>If you are not redirected in five seconds, <a href="https://cplusplus.github.io/SG20/latest/">click here</a>.</p>
 </body>
